--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,36 +1,40 @@
 #navbar {
     background-color: maroon;
-    color: white;
     width: 100%;
     height: 70px;
     display: flex;
     align-items: center;
     position: fixed;
     top: 0;
+    padding-right: 200px;
+  
   }
   
-  Link {
-    color: white;
-  }
   
   ul {
     margin: 0;
     width: 100%;
     list-style: none;
-    display: flex;
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
     justify-content: space-around;
     align-items: center;
   }
   
   li:hover {
-    text-decoration: underline;
     cursor: pointer;
     background-color: rgb(194, 10, 10);
   }
 
   li {
-    padding: 10px;
-    font-size: 28px;
+    padding: 12px;
+    font-size: 1.8rem;
+    grid-column: span 1;
+    display: inline-block;
+  }
+
+  .navlink {
+    color: rgb(219, 218, 218)
   }
 
   span {
@@ -38,5 +42,19 @@
   }
 
   .bignumb {
-    font-size: 38px; 
+    font-size: 2.3rem; 
+  }
+
+  #active {
+    color: white;
+  }
+
+  .homelink {
+    color: rgb(248, 122, 143);
+    font-weight: 900;   
+    font-size: 2rem;
+  }
+
+  #activehome {
+    color: rgb(252, 177, 190);
   }
