--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -34,7 +34,7 @@
   }
 
   .navlink {
-    color: rgb(219, 218, 218)
+    color: rgba(219, 218, 218, 0.87)
   }
 
   span {
@@ -52,9 +52,25 @@
   .homelink {
     color: rgb(248, 122, 143);
     font-weight: 900;   
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   #activehome {
-    color: rgb(252, 177, 190);
+    color: rgb(255, 186, 232);
+  }
+
+
+  @media (width < 600px) {
+    ul {
+      padding: 10px 10px 0 0;
+    }
+
+    li {
+      font-size: 1.2rem;
+    }
+
+    .homelink {
+    font-size: 1.3rem;
+    padding: 0px;
+    }
   }
