--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
 
 html {
   margin: 0;
   font-size: 20px;
   overflow-y: scroll;
+  min-height: 100%
 }
 
+.root {
+  min-height: 100%;
+}
