--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -7,11 +7,12 @@
     position: fixed;
     top: 0;
     padding-right: 200px;
+    z-index: 2;
   
   }
   
   
-  ul {
+  #navbar > ul {
     margin: 0;
     width: 100%;
     list-style: none;
@@ -21,13 +22,13 @@
     align-items: center;
   }
   
-  li:hover {
+  .navlink:hover {
     cursor: pointer;
     background-color: rgb(194, 10, 10);
   }
 
-  li {
-    padding: 12px;
+  .navlink {
+    padding: 5px;
     font-size: 1.8rem;
     grid-column: span 1;
     display: inline-block;
@@ -59,10 +60,18 @@
     color: rgb(255, 186, 232);
   }
 
+  @media (width < 1200px) {
 
-  @media (width < 600px) {
+    ul {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+
+  @media (width < 800px) {
+
     ul {
       padding: 10px 10px 0 0;
+      grid-template-columns: 1fr 1fr 1fr;
     }
 
     li {
@@ -70,7 +79,22 @@
     }
 
     .homelink {
-    font-size: 1.3rem;
-    padding: 0px;
+      font-size: 1.3rem;
+      padding: 0px;
     }
+  }
+
+  @media (width < 500px) {
+
+    li {
+      font-size: 1rem;
+    }
+    .homelink {
+      font-size: 1rem;
+      padding: 0px;
+    }
+    a {
+      margin: 0px; 
+    }
+
   }
