--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100%;
+  overflow: auto;
 }
 
 html {
   margin: 0;
   font-size: 20px;
   overflow-y: scroll;
-  min-height: 100%
+  min-height: 100%;
 }
 
-.root {
-  min-height: 100%;
+#root {
+  height: 100%;
 }
