--- a/src/Slider/slider.css
+++ b/src/Slider/slider.css
@@ -1,13 +1,11 @@
 .carousel {
-    width: 100vw;
-    height: 100vh;
+    padding: 0px;
+    margin: 0px;
+    width: calc(100vw - 15px);
+    height: calc(100vh - 40px);
+    overflow-x: hidden;
     position: relative;
-}
-
-.carousel > ul {
-    padding: none;
-    margin: none;
-    width: 100vw
+    flex: 1;
 }
 
 .slide {
@@ -20,8 +18,8 @@
 
 .slide > img {
     display: block;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -30,31 +28,4 @@
     opacity: 1;
     transition-delay: 0ms !important;
     z-index: 1;
-}
-
-.carouselbtn {
-    position: absolute;
-    z-index: 2;
-    background: none;
-    top: 50%;
-    font-size: 4rem;
-    color: rgba(255, 255, 255, 0.5);
-    background-color: rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    border-radius: 0.25rem;
-    padding: 0 0.5rem
-}
-
-.carouselbtn:hover,
-.carouselbtn:focus {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-.prev {
-    left: 1rem
-}
-
-.next {
-    right: 1rem
 }
