--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -67,14 +67,14 @@
     }
   }
 
-  @media (width < 800px) {
+  @media (width < 950px) {
 
     ul {
       padding: 10px 10px 0 0;
       grid-template-columns: 1fr 1fr 1fr;
     }
 
-    li {
+    .navlink {
       font-size: 1.2rem;
     }
 
@@ -86,7 +86,7 @@
 
   @media (width < 500px) {
 
-    li {
+    .navlink {
       font-size: 1rem;
     }
     .homelink {
