--- a/src/Slider/slider.css
+++ b/src/Slider/slider.css
@@ -1,3 +1,10 @@
+.sliderContainer {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .carousel {
     padding: 0px;
     margin: 0px;
@@ -12,8 +19,8 @@
     position: absolute;
     inset: 0;
     opacity: 0;
-    transition: 500ms opacity ease-in-out;
-    transition-delay: 500ms;
+    transition: 800ms opacity ease-in-out;
+    transition-delay: 800ms;
 }
 
 .slide > img {
@@ -28,4 +35,58 @@
     opacity: 1;
     transition-delay: 0ms !important;
     z-index: 1;
+}
+
+.welcome {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    position: fixed;
+    z-index: 4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 10px;
+    
+}
+
+.welcome > h2 {
+    margin: 0px 0px 5px 0px;
+    text-align: center;
+    color: white
+}
+
+.welcome > h3 {
+    color: #fa7584;
+}
+
+.welcomebtn {
+
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1;
+    border-radius: 500px;
+    transition-property: background-color,border-color,color,box-shadow,filter;
+    transition-duration: .3s;
+    border: 1px solid transparent;
+    letter-spacing: 2px;
+    min-width: 160px;
+    text-transform: uppercase;
+    white-space: normal;
+    font-weight: 700;
+    text-align: center;
+    padding: 16px 14px 18px;
+    color: #fff;
+    background-color: maroon;
+    height: 48px;
+    margin-top: 20px;
+
+}
+
+.welcomebtn:hover{
+    background-color: rgb(190, 23, 23);
+    border: 1px solid white;
+    
 }
